cmake_minimum_required(VERSION 3.16)
project(algorithm_pattern_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_pattern_code main.cpp ListHandler.cpp ListHandler.h Nodes.h BinaryTree.cpp BinaryTree.h SortTool.cpp SortTool.h BinarySearchTree.cpp BinarySearchTree.h Recursive.cpp Recursive.h DivideConquer.cpp DivideConquer.h DynamicProgramming.cpp DynamicProgramming.h BitOperations.cpp BitOperations.h HashTable.cpp HashTable.h StringHandler.cpp StringHandler.h SlidingWindow.cpp SlidingWindow.h BackTracking.cpp BackTracking.h OtherExecs.cpp OtherExecs.h GraphHandler.cpp GraphHandler.h BFS_DFS.cpp BFS_DFS.h StackAndQueue.cpp StackAndQueue.h)